# lab03_convolution_template

./: CMakeLists.txt  README.md
Convolution/: canvas2d.cpp  canvas2d.h  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
Convolution/filters/: FilterGray.cpp  FilterIdentity.cpp  FilterInvert.cpp  FilterShift.cpp  filterutils.cpp  filterutils.h
src/: RGBA.h  canvas2d.cpp  canvas2d.h  main.cpp  mainwindow.cpp  mainwindow.h  settings.cpp  settings.h
src/filters/: filterbrighten.cpp  filtergray.cpp  filteridentity.cpp  filterinvert.cpp  filtershift.cpp  filtersobel.cpp  filterutils.cpp  filterutils.h
